added changes in kidcontroller, services